package masterslave;
option go_package = "masterslave";

//application
enum ApplicationState {
  kUnknown = 0;
  kNewApp = 1;
  kRunning = 2;
  kStopping = 3;
  kRestarting = 4;
  kExited = 5;
  kError = 6;
}

message ApplicationStatus {
  required ApplicationState state = 1 [default = kUnknown];
  required string name = 2;
  optional int32 pid = 3;
  optional string executable_file = 4;
  optional string cwd = 5;
  optional string message = 6;
  optional string slave_name = 8;

  optional int64 start_time_us = 10;
  optional int64 last_stop_time_us = 11;
  optional string proc_stat = 12;
  optional string proc_status = 13;

  optional int32 last_exit_status = 30;
  optional int32 last_signaled = 31;
  optional bool last_coredump = 32;
}

message SlaveCommander {
  required string slave_name = 1;
  optional string commander_name = 2;
}

message AddApplicationRequest {
  required string name = 1;
  optional string binary = 2;
  repeated string args = 3;
  repeated string envs = 4;
  optional bool envs_only = 5 [default = false];
  optional bool redirect_stdout = 6 [default = true];
  optional bool redirect_stderr = 7 [default = true];
  required SlaveCommander slave_commander = 8;
  optional int32 max_memory_mb = 9 [default = 32768];
  optional string comment = 10;

  repeated string md5sum_files = 20;
  repeated string expected_md5sums = 21;
  optional bool md5sum_now = 22;
}

message AddApplicationResponse {
  optional ApplicationStatus status = 1;
  optional AddApplicationRequest prev_request = 2;
  repeated string md5sums = 3;
  required SlaveCommander slave_commander = 4;
}

message StartApplicationsRequest {
  repeated string names = 1;
  required SlaveCommander slave_commander = 2;
}

message StartApplicationsResponse {
  repeated ApplicationStatus status = 1;
  required SlaveCommander slave_commander = 2;
}

message StopApplicationRequest {
  required string name = 1;
  required SlaveCommander slave_commander = 2;
}

message StopApplicationResponse {
  required ApplicationStatus status = 1;
  required SlaveCommander slave_commander = 2;
}

message RestartApplicationRequest {
  required string name = 1;
  required SlaveCommander slave_commander = 2;
}

message RestartApplicationResponse {
  required ApplicationStatus status = 1;
  required SlaveCommander slave_commander = 2;
}

message GetApplicationsRequest {
  repeated string names = 1;
  required SlaveCommander slave_commander = 2;
}

message GetApplicationsResponse {
  repeated ApplicationStatus status = 1;
  required SlaveCommander slave_commander = 2;
}

message ListApplicationsRequest {
  required SlaveCommander slave_commander = 2;
}

message ListApplicationsResponse {
  repeated string names = 1;
  required SlaveCommander slave_commander = 2;
}

message RemoveApplicationsRequest {
  repeated string names = 1;
  required SlaveCommander slave_commander = 2;
}

message RemoveApplicationsResponse {
  required SlaveCommander slave_commander = 1;
}

message DeadApplicationRequest {
  required string appName = 1;
  required int32 processID = 2;
  required string processState = 3;
  required ApplicationState prevState = 4;
  required SlaveCommander slave_commander = 5;
}


//master-slave
message AddSlaveRequest {
  required string slave_name = 1;
}

message RemoveSlaveRequest {
}

//master-commander
message AddCommanderRequest {
}

message RemoveCommanderRequest {
}
